--- a/_config.yml
+++ b/_config.yml
@@ -46,8 +46,6 @@ staticman:
       type               : "date"
       options:
         format           : "iso8601" # "iso8601" (default), "timestamp-seconds", "timestamp-milliseconds"
-atom_feed:
-  path                   : # blank (default) uses feed.xml
 
 # SEO Related
 google_site_verification :
@@ -82,7 +80,7 @@ analytics:
 author:
   name             : "Jack Henderson"
   avatar           : "profile.png"
-  bio              : "Mechatronics Engineer\n PhD Student"
+  bio              : "Mechatronics Engineer<br/> PhD Student"
   location         : "Canbera, Australia"
   employer         : "Australian National University"
   pubmed           : 
@@ -97,12 +95,13 @@ author:
   facebook         :
   foursquare       :
   github           : 
+  gitlab           : "https://gitlab.anu.edu.au/u5561978"
   google_plus      :
   keybase          :
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/jack-henderson-24908b9b/"
+  linkedin         : "jack-henderson-24908b9b"
   orcid            : 
   pinterest        :
   soundcloud       :
@@ -115,6 +114,7 @@ author:
   xing             :
   youtube          :
   wikipedia        :
+  anu_profile      : "https://cecs.anu.edu.au/people/jack-henderson"
 
 
 # Reading Files
@@ -178,7 +178,13 @@ collections:
   teaching:
     output: true
     permalink: /:collection/:path/
-  publications:
+  journal_papers:
+    output: true
+    permalink: /:collection/:path/
+  conference_papers:
+    output: true
+    permalink: /:collection/:path/
+  other_publications:
     output: true
     permalink: /:collection/:path/
   portfolio:
@@ -218,14 +224,32 @@ defaults:
       author_profile: true
       share: true
       comments: true
-  # _publications
+  # _journal_papers
   - scope:
       path: ""
-      type: publications
+      type: journal_papers
     values:
       layout: single
       author_profile: true
-      share: true
+      share: false
+      comments: true
+  # _conference_papers
+  - scope:
+      path: ""
+      type: conference_papers
+    values:
+      layout: single
+      author_profile: true
+      share: false
+      comments: true
+  # _other_publications
+  - scope:
+      path: ""
+      type: other_publications
+    values:
+      layout: single
+      author_profile: true
+      share: false
       comments: true
   # _portfolio
   - scope:
@@ -261,16 +285,12 @@ timezone: America/Los_Angeles # http://en.wikipedia.org/wiki/List_of_tz_database
 # Plugins
 plugins:
   - jekyll-paginate
-  - jekyll-sitemap
   - jekyll-gist
-  - jekyll-feed
   - jekyll-redirect-from
 # mimic GitHub Pages with --safe
 whitelist:
   - jekyll-paginate
-  - jekyll-sitemap
   - jekyll-gist
-  - jekyll-feed
   - jemoji
 
 
