--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ analytics:
 # Site Author
 author:
   name             : "Jack Henderson"
-  avatar           : "profile.png"
+  avatar           : "profile.jpg"
   bio              : "Mechatronics Engineer<br/> PhD Student"
   location         : "Canbera, Australia"
   employer         : "Australian National University"
