--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ author:
   name             : "Jack Henderson"
   avatar           : "profile.jpg"
   bio              : "Mechatronics Engineer<br/> PhD Student"
-  location         : "Canbera, Australia"
+  location         : "Canberra, Australia"
   employer         : "Australian National University"
   pubmed           : 
   googlescholar    : 
