--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         : "jack-henderson-24908b9b"
-  orcid            : 
+  orcid            : "https://orcid.org/0000-0003-1506-0316"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
